# brew_oracle

./: .gitignore  .pre-commit-config.yaml  README.md  download_model.py  env-example  pyproject.toml
knowledge/recipes/: test_recipe.xml
src/brew_oracle/agents/: __init__.py
src/brew_oracle/core/: run.py
src/brew_oracle/knowledge/: beerxml_kb.py  pdf_kb.py
src/brew_oracle/orchestrator/: brewing_orchestrator.py
src/brew_oracle/scripts/: create_collections.py  query_with_rerank.py
src/brew_oracle/utils/: config.py
tests/knowledge/: test_beerxml_kb.py  test_pdf_kb.py
tests/orchestrator/: test_brewing_orchestrator.py
tests/scripts/: test_create_collections.py
