[project]
name = "brew_oracle"
version = "0.1.0"
description = "AI agent specialized in craft beer, recipes, styles, and all things brewing."
authors = [
    {name = "cauemn", email = "caue@stellaria.com.br"},
]
dependencies = ["agno>=1.7.8", "qdrant-client>=1.15.1", "pdfplumber>=0.11.7", "python-dotenv>=1.1.1", "tqdm>=4.67.1", "sentence-transformers>=5.1.0", "xmltodict>=0.14.2", "pypdf>=5.9.0", "pydantic-settings>=2.10.1", "google-genai>=1.29.0"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
brew-oracle = "brew_oracle.core.run:main"

[tool.pdm]
distribution = false

[tool.pdm.scripts]
create-collection = { cmd = "python -m brew_oracle.scripts.create_collections", env = { PYTHONPATH = "src" }, env_file = ".env" }
ingest-pdfs       = { cmd = "python -c \"from brew_oracle.knowledge.pdf_kb import ingest_pdfs; ingest_pdfs()\"", env = { PYTHONPATH = "src" }, env_file = ".env" }
brew-oracle       = { cmd = "python -m brew_oracle.core.run", env = { PYTHONPATH = "src" }, env_file = ".env" }